Fixed image on mobile screens

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -43,13 +43,25 @@
 .image {
   max-height: 450px;
   transform: scaleX(-1);
-  /* border: 4px solid var(--clr-primary); */
+  margin: auto;
   /* border-radius: 35% 50% 30% 50%;  */
 }
 
-@media (max-width: 640px) {
+@media (max-width: 750px) {
   .about_box {
     flex-direction: column;
+    height: max-content;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .about__contact {
+    display: flex;
+    justify-content: center;
+  }
+  .image {
+    margin-top: 2em;
+    height: 250px;
   }
 }
 
